--- a/09-06-2025/style.css
+++ b/09-06-2025/style.css
@@ -15,10 +15,10 @@ Accent Gray	#E0E0E0	Button hover, secondary areas */
     --primary-blue-hover: #2a91db;
     --light-blue: #ecf8ff;
     --light-gray: #ccc;
-    --bg-fill: #F5F5F5;
     --accent-gray: #E0E0E0;
     --nav-button-gap: 40px;
     --auth-button-gap: 20px;
+    --border-radius: 8px;
 }
 
 html{
@@ -65,7 +65,7 @@ button{
     font-family: 'Inter', sans-serif !important;
     font: 16px normal;
     padding: 12px 24px;
-    border-radius: 8px;
+    border-radius: var(--border-radius);
     cursor: pointer;
 }
 
@@ -162,7 +162,6 @@ button{
     height: 56vh;
 }
 
-
 #hero-heading{
     font-size: 60px;
     line-height: 70px;
@@ -199,7 +198,7 @@ button{
     gap: 10px;
     align-items: center;
     justify-content: center;
-    border-radius: 8px;
+    border-radius: var(--border-radius);
     padding: 20px 24px 24px 24px;
     box-shadow: 2px 2px 3px 2px rgb(232, 232, 232);
 }
@@ -246,7 +245,7 @@ button{
     align-items: flex-start;
     gap: 40px;
     background-color: #fff;
-    border-radius: 8px;
+    border-radius: var(--border-radius);
     padding: 20px 80px;
 }
 
@@ -386,8 +385,4 @@ button{
         font-size: 32px;
         margin-bottom: 10px;
     }
-
-
-
 }
-   
