--- a/16-06-2025/app/src/app/product/product.html
+++ b/16-06-2025/app/src/app/product/product.html
@@ -1,8 +1,7 @@
-<div class="card" style="width: 18rem;">
+<div class="card" id="product-card" style="width: 18rem;">
   <img class="card-img-top" [src]="product?.thumbnail" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title">{{product?.title}}</h5>
-    <p class="card-text">{{product?.description}}</p>
+    <h3 class="card-title">{{product?.title}}</h3>
     <button (click)="handleBuyClick(product?.id)" class="btn btn-primary">Buy for {{product?.price | currency:'INR'}}</button>
   </div>
 </div>
