--- a/17-06-2025/app/src/app/navbar/navbar.html
+++ b/17-06-2025/app/src/app/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
-        <li><a routerLink="home:Mark">Home</a></li>
-        <li><a routerLink="home/about">About</a></li>
-        <li><a routerLink="home/contact">Contact</a></li>
+        <li><a [routerLink]="['home',username]">Home</a></li>
+        <li><a [routerLink]="['home',username,'about']">About</a></li>
+        <li><a [routerLink]="['home',username,'contact']">Contact</a></li>
     </ul>
 </nav>
