feat: Day 32 Angular ( Products listing with Routing and Product Detail page )

--- a/17-06-2025/app/src/app/navbar/navbar.html
+++ b/17-06-2025/app/src/app/navbar/navbar.html
@@ -3,5 +3,8 @@
         <li><a [routerLink]="['home',username]">Home</a></li>
         <li><a [routerLink]="['home',username,'about']">About</a></li>
         <li><a [routerLink]="['home',username,'contact']">Contact</a></li>
+        <li><a routerLink="/products">Products</a></li>
+        <li><a routerLink="/login">Login</a></li>
+        <li><a routerLink="/profile">Profile</a></li>
     </ul>
 </nav>
