--- a/Quizup-Angular-Application/src/app/features/auth/register/register.html
+++ b/Quizup-Angular-Application/src/app/features/auth/register/register.html
@@ -70,5 +70,24 @@
     }
   </div>
 
+
+    <div class="form-group">
+    <label>
+      Role:
+      <select name="role" formControlName="role" class="form-control">
+        <option value="Admin">Admin</option>
+        <option value="Teacher">Teacher</option>
+        <option value="Student">Student</option>
+      </select>
+    </label>
+    @if(userForm.get('role')?.invalid && userForm.get('role')?.touched) {
+    <div class="text-danger">
+      @if(userForm.get('role')?.errors?.['required']) {
+      <p>Role is required.</p>
+      }
+    </div>
+    }
+  </div>
+
   <button type="submit">Submit</button>
 </form>
