--- a/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
+++ b/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
@@ -1,18 +1,25 @@
 <header>
-    <div class="logo-div">
-        <img src="" alt="">
-        <h1>Quizup</h1>
+  <div class="logo-div">
+    <img src="" alt="" />
+    <h1>Quizup</h1>
+  </div>
+
+  <div class="flex">
+    <div class="links-div mr-2">
+      <li>
+        <a routerLink="/dashboard">Dashboard</a>
+      </li>
+      <li>
+        <a routerLink="/quizzes">Quizzes</a>
+      </li>
+      <li>
+        <a routerLink="/notifications">Notifications</a>
+      </li>
     </div>
 
-    <div class="links-div">
-        <li>
-            <a routerLink="/dashboard">Dashboard</a>
-        </li>
-         <li>
-            <a routerLink="/quizzes">Quizzes</a>
-        </li>
-         <li>
-            <a routerLink="/notifications">Notifications</a>
-        </li>
+    <div class="flex gap-2">
+      <span class="user-name">{{ username }}</span>
+      <button class="logout-button">Logout</button>
     </div>
+  </div>
 </header>
