--- a/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.css
+++ b/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.css
@@ -1,18 +1,54 @@
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 20px;
+header {
+  display: flex;
+  z-index: 100;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 20px;
 }
 
-.logo-div{
-    display: flex;
-    align-items: center;
-    gap: 10px;
+h1 {
+  font-size: 2rem;
+  font-weight: bolder;
+  color: #333;
 }
 
-.links-div{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+.logo-div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.links-div {
+  display: flex;
+  gap: 30px;
+  margin-right: 30px;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+a:hover {
+  color: #2d2431;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.logout-button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: 1px solid #c6c4ca;
+  color: #2e2932;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.logout-button:hover {
+  border: 1px solid #2d2431;
+}
+
+li {
+  list-style: none;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #333;
 }
