--- a/Quizup-Angular-Application/src/styles.css
+++ b/Quizup-Angular-Application/src/styles.css
@@ -1,14 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
-@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;800;900&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Titillium+Web:wght@100;200;300;400;500;600;800;900&display=swap);
 
 body {
-  font-family: 'Inter', sans-serif;
-  padding: 30px;
+  font-family: "Titillium Web", sans-serif !important;
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+body {
+  padding: 30px;
+  background-color: #eae9ee;
+  color: #2e2932;
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
