refactor: Rename model classes for clarity

--- a/Quizup-Angular-Application/src/app/features/quiz/components/quiz-card/quiz-card.html
+++ b/Quizup-Angular-Application/src/app/features/quiz/components/quiz-card/quiz-card.html
@@ -22,7 +22,8 @@
     </p>
 
     <p class="text-gray-600 mb-4">
-      <strong>Number of Questions: </strong> {{ quiz?.questions?.length }}
+      <strong>Number of Questions: </strong> {{ quiz?.quizQuestions?.length || 0
+      }}
     </p>
 
     @if( showAttempt ){
