--- a/Quizup-Angular-Application/src/app/features/quiz/quiz-question/quiz-question.html
+++ b/Quizup-Angular-Application/src/app/features/quiz/quiz-question/quiz-question.html
@@ -1,25 +1,18 @@
-<div
-  *ngIf="question; else loading"
-  class="flex-col gap-10 items-center justify-center text-center"
->
+@if(!question) {
+<div class="text-center text-gray-500 text-xl">Loading question...</div>
+}
+
+<div class="flex-col gap-10 items-center justify-center text-center">
   <p class="text-4xl font-bold text-gray-800 tracking-wide">
-    {{ question?.id }}) {{ question?.questionText }}
+    {{ question?.id }}) {{ question?.text }}
   </p>
   <div class="grid grid-cols-2 mt-10 gap-8 w-[800px] mx-auto text-xl">
+    @for(option of question?.options; track $index) {
     <button
-      *ngFor="let option of question?.options; let i = index"
-      [ngClass]="{
-        'bg-[#11d875] text-white font-semibold border-[#ffffffd6] border-2 rounded-lg p-14': i === 0,
-        'bg-[#ff3855] text-white font-semibold border-[#ffffffd6] border-2 rounded-lg': i === 1,
-        'border border-[#bfbdc2] bg-[#eeecf3] rounded-lg p-14': i === 2,
-        'border border-[#c6c4ca] bg-[#eeecf3] rounded-lg': i === 3
-      }"
+      class="text-black font-semibold border-[#bfbdc2] border-2 rounded-lg p-14"
     >
       {{ option }}
     </button>
+    }
   </div>
 </div>
-
-<ng-template #loading>
-  <div class="text-center text-gray-500 text-xl">Loading question...</div>
-</ng-template>
