--- a/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
+++ b/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
@@ -7,7 +7,7 @@
   <div class="flex">
     <div class="links-div mr-2">
       <li>
-        <a routerLink="/dashboard">Dashboard</a>
+        <a routerLink="/">Dashboard</a>
       </li>
       <li>
         <a routerLink="/quizzes">Quizzes</a>
