--- a/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.css
+++ b/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.css
@@ -32,7 +32,7 @@ a:hover {
   cursor: pointer;
 }
 
-.logout-button {
+.login-button {
   padding: 10px 20px;
   border-radius: 5px;
   border: 1px solid #c6c4ca;
@@ -42,8 +42,23 @@ a:hover {
   transition: all 0.3s ease;
 }
 
-.logout-button:hover {
+.login-button:hover {
   border: 1px solid #2d2431;
+}
+
+
+.logout-button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #2e2932;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.logout-button:hover {
+  background-color: #2d2431;
 }
 
 li {
