feat: Implement dashboard and profile features ( only UI ) with routing, services, and UI components

--- a/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
+++ b/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
@@ -15,6 +15,12 @@
       <li>
         <a routerLink="/notifications">Notifications</a>
       </li>
+      <li>
+        <a routerLink="/dashboard">Dashboard</a>
+      </li>
+      <li>
+        <a routerLink="/profile">Profile</a>
+      </li>
     </div>
 
     <div class="flex gap-2">
