--- a/Quizup-Angular-Application/src/app/features/admin/teachers-list/teachers-list.component.css
+++ b/Quizup-Angular-Application/src/app/features/admin/teachers-list/teachers-list.component.css
@@ -1,3 +1,19 @@
+.header {
+  width: 90%;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.header h2 {
+  font-size: 2rem;
+  font-weight: 600;
+  word-spacing: 1px;
+  color: #2e2932;
+}
+
 .table-list-container {
   display: flex;
   flex-direction: column;
@@ -50,8 +66,17 @@ table tbody tr:hover {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.06);
 }
 
-table tbody tr td:last-child {
-  border-radius: 8px;
+table tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 8px;
+}
+
+table tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 8px;
+}
+
+#add-button {
+  background-color: #2d2431;
+  color: white;
 }
 
 button {
@@ -66,7 +91,31 @@ button {
   color: #333;
 }
 
+button:first-child {
+  margin-right: 0.5rem;
+}
+
 button:hover {
   background-color: #2d2431;
   color: white;
+}
+
+table th:last-child,
+table td:last-child {
+  width: 1%;
+  gap: 0.5rem;
+  white-space: nowrap;
+}
+
+#subjects-list {
+  list-style: none;
+  display: flex;
+  gap: 0.5rem;
+  padding: 0;
+  margin: 0;
+}
+
+#subjects-list li {
+  padding: 0.2rem 0.4rem;
+  border: 1px solid #dadada;
 }
