feat: Implement orders, payments listing

--- a/04-07-2025/RazorPayIntegration/AngularApp/src/app/features/payment/payment-form/payment-form.html
+++ b/04-07-2025/RazorPayIntegration/AngularApp/src/app/features/payment/payment-form/payment-form.html
@@ -26,7 +26,7 @@
       id="customerName"
       type="text"
       formControlName="customerName"
-      placeholder="Ex: John Doe"
+      placeholder="Ex: Mark Grayson"
     />
     @if(customerName?.invalid && (customerName?.touched || customerName?.dirty))
     {
@@ -46,7 +46,7 @@
       id="email"
       type="email"
       formControlName="email"
-      placeholder="Ex: user@example.com"
+      placeholder="Ex: user@gmail.com"
     />
     @if(email?.invalid && (email?.touched || email?.dirty)) {
     <div class="error-message">
