--- a/04-07-2025/RazorPayIntegration/AngularApp/src/app/app.html
+++ b/04-07-2025/RazorPayIntegration/AngularApp/src/app/app.html
@@ -1,2 +1,4 @@
+<app-navbar></app-navbar>
 <h1>RazorPay Integration with Angular</h1>
-<app-payment-form></app-payment-form>
+<router-outlet></router-outlet>
+
