--- a/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
+++ b/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<header>
+<header [ngClass]="isScrolled ? 'scrolled' : ''">
   <div class="logo-div">
     <img src="" alt="" />
     <h1>Quizup</h1>
