--- a/Quizup-Angular-Application/src/app/features/landing/landing.html
+++ b/Quizup-Angular-Application/src/app/features/landing/landing.html
@@ -1,5 +1,28 @@
-<section class="hero-section flex items-center p-24">
-  <div class="w-[50%] h-full flex flex-col">
+<div class="blob-background">
+  <img
+    src="assets/images/blob1.png"
+    alt="Blob"
+    class="blob-image blob-top-left"
+  />
+  <img
+    src="assets/images/blob2.png"
+    alt="Blob"
+    class="blob-image blob-top-right"
+  />
+  <img
+    src="assets/images/blob3.png"
+    alt="Blob"
+    class="blob-image blob-bottom-left"
+  />
+  <img
+    src="assets/images/blob1.png"
+    alt="Blob"
+    class="blob-image blob-bottom-right"
+  />
+</div>
+
+<section class="hero-section flex items-center px-24 pt-18">
+  <div class="w-[60%] h-full flex flex-col">
     <h2 class="text-6xl font-bold mb-5">
       Create Quizzes in Minutes Engage Students Instantly Empower your teaching
       with
@@ -10,45 +33,53 @@
 
     <button class="get-started-button w-fit mt-10">Get Started</button>
   </div>
+  <div class="w-[40%] h-full flex items-center justify-center">
+    <img
+      src="assets/images/blob4.png"
+      alt="Description"
+      width="450"
+      height="450"
+      class="blob-hero-image"
+    />
+  </div>
 </section>
 
-<section class="hero-section flex flex-col items-start p-24">
+<section class="instruction-section flex flex-col items-center px-24 pt-20">
   <h2 class="text-6xl font-bold mb-5">For Teachers</h2>
   <ul class="text-2xl list-disc pl-10">
     <li>
-      <strong>Step 1: Login as Teacher</strong> - Securely sign in to your
-      teacher dashboard.
+      <strong>Step 1: Login as Teacher</strong> Securely sign in to your teacher
+      dashboard.
     </li>
 
     <li>
-      <strong>Step 2: Create Quiz</strong> - Design custom quizzes with
-      questions tailored to your curriculum—multiple choice, short answer, and
-      more.
+      <strong>Step 2: Create Quiz</strong> Design custom quizzes with questions
+      tailored to your curriculum—multiple choice, short answer, and more.
     </li>
 
     <li>
-      <strong>Step 3: Share with Students</strong> - Generate a unique code or
+      <strong>Step 3: Share with Students</strong> Generate a unique code or
       link to invite students. Track performance in real time.
     </li>
   </ul>
 </section>
 
-<section class="hero-section flex flex-col items-start p-24">
+<section class="instruction-section flex flex-col items-center px-24 py-20">
   <h2 class="text-6xl font-bold mb-5">For Students</h2>
   <ul class="text-2xl list-disc pl-10">
     <li>
-      <strong>Step 1: Login as Student</strong> - Join with your class
-      credentials or access code.
+      <strong>Step 1: Login as Student</strong> Join with your class credentials
+      or access code.
     </li>
 
     <li>
-      <strong>Step 2: Attempt Quiz</strong> - Answer questions within the
-      allotted time using any device.
+      <strong>Step 2: Attempt Quiz</strong> Answer questions within the allotted
+      time using any device.
     </li>
 
     <li>
-      <strong>Step 3: Submit Quiz</strong> - Get instant confirmation and see
-      your results (if enabled by the teacher).
+      <strong>Step 3: Submit Quiz</strong> Get instant confirmation and see your
+      results (if enabled by the teacher).
     </li>
   </ul>
 </section>
